--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
     <link href="https://refreshless.com/nouislider/distribute/nouislider.css?v=1210" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
