--- a/html/home.html
+++ b/html/home.html
@@ -39,9 +39,12 @@
 </div>
 
 <!-- Size selector - no need to modify -->
-<div id="slider-pips" class="noUi-target noUi-ltr noUi-horizontal" data-toggle="tooltip" data-placement="top" title="Select sizes">
-  <div class="noUi-connect" style="transform: translate(10%, 0px) scale(0, 1);"></div>
+<div id="slider-container">
+  <div id="slider-pips" class="noUi-target noUi-ltr noUi-horizontal" data-toggle="tooltip" data-placement="top" title="Select sizes">
+    <div class="noUi-connect" style="transform: translate(10%, 0px) scale(0, 1);"></div>
+  </div>
 </div>
+
 
 
 <div class="container">
