--- a/html/home.html
+++ b/html/home.html
@@ -2,7 +2,7 @@
 <div class="pb-4 row">
   <div class="col-6">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false">Primary</button>
       <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 35px, 0px); top: 0px; left: 0px; will-change: transform;">
         <a class="dropdown-item" href="#">Item</a>
@@ -15,7 +15,7 @@
   </div>
   <div class="col-6">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false">Secondary</button>
       <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 35px, 0px); top: 0px; left: 0px; will-change: transform;">
         <a class="dropdown-item" href="#">Item</a>
@@ -46,9 +46,8 @@
 </div>
 
 
-
 <div class="container">
-  <button id='launch' type="button" class="btn btn-outline-primary vbottom mb-5">Launch Tasks</button>
+    <button id='launch' type="button" class="btn btn-secondary vbottom mb-4">Create tasks</button>
 </div>
 
 <!----------------
