--- a/html/index.html
+++ b/html/index.html
@@ -45,10 +45,10 @@
     <div class="wrapper">
         <!-- Sidebar Holder -->
         <nav id="sidebar">
-            <div class="sidebar-header">
-                <!-- <h3>Scurry</h3> -->
-                <img id='logo-img' src='./img/mouse-icon2.jpg'/>
-            </div>
+            <!-- <div class="sidebar-header">
+                <h3>Scurry</h3>
+                <img id='logo-img' src='./img/mouse-icon2.png'/>
+            </div> -->
 
             <ul class="list-unstyled components">
                 <li class="active">
