--- a/html/home.html
+++ b/html/home.html
@@ -3,20 +3,7 @@
   <div class="col-6">
     <div class="btn-group">
       <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-        aria-expanded="false">Primary</button>
-      <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 35px, 0px); top: 0px; left: 0px; will-change: transform;">
-        <a class="dropdown-item" href="#">Item</a>
-        <a class="dropdown-item" href="#">Another item</a>
-        <a class="dropdown-item" href="#">One more item</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Separated item</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-6">
-    <div class="btn-group">
-      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-        aria-expanded="false">Secondary</button>
+        aria-expanded="false">Item</button>
       <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 35px, 0px); top: 0px; left: 0px; will-change: transform;">
         <a class="dropdown-item" href="#">Item</a>
         <a class="dropdown-item" href="#">Another item</a>
@@ -31,7 +18,7 @@
 <!-- Number spionner for choosing how many bots to create -->
 <div class="pb-4 row">
     <div class="col-6">
-        <input class="form-control" type="number" value="1" min="1" max="10">
+        <input class="form-control" type="text" value="Quanity" min="1" max="">
     </div>
     <div class="col-6">
     </div>
@@ -53,6 +40,7 @@
 <!----------------
 Scripts
 ----------------->
+<script src="./js/home.js"></script>
 
 <!-- For number picker -->
 <script src="./js/bootstrap-number-input.js"></script>
