--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Yeezy Bot</title>
+    <title>Scuttle Bot</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
@@ -55,13 +55,22 @@
                     <a href="#/">Home</a>
                 </li>
                 <li>
-                    <a href="#!/about">Monitor</a>
+                    <a href="#!/about">Tasks</a>
                 </li>
                 <li>
-                    <a href="#!/portfolio">Portfolio</a>
+                    <a href="#!/portfolio">Monitors</a>
                 </li>
                 <li>
-                    <a href="#!/settings">Settings</a>
+                    <a href="#!/settings">Proxies</a>
+                </li>
+                <li>
+                    <a href="#!/settings">Billing</a>
+                </li>
+                <li>
+                    <a href="#!/settings">Options</a>
+                </li>
+                <li>
+                    <a href="#!/settings">License</a>
                 </li>
             </ul>
         </nav>
