--- a/html/index.html
+++ b/html/index.html
@@ -55,22 +55,22 @@
                     <a href="#/">Home</a>
                 </li>
                 <li>
-                    <a href="#!/about">Tasks</a>
+                    <a href="#!/tasks">Tasks</a>
                 </li>
                 <li>
-                    <a href="#!/portfolio">Monitors</a>
+                    <a href="#!/monitors">Monitors</a>
                 </li>
                 <li>
-                    <a href="#!/settings">Proxies</a>
+                    <a href="#!/proxies">Proxies</a>
                 </li>
                 <li>
-                    <a href="#!/settings">Billing</a>
+                    <a href="#!/billing">Billing</a>
                 </li>
                 <li>
-                    <a href="#!/settings">Options</a>
+                    <a href="#!/options">Options</a>
                 </li>
                 <li>
-                    <a href="#!/settings">License</a>
+                    <a href="#!/license">License</a>
                 </li>
             </ul>
         </nav>
